@@ -1,20 +1,20 @@
-iter 0: A = 1.0000, lambda = 1.0000, b = 0.0000, cond(J) = 46.1118, |f(x)| = 62.2029
-iter 1: A = 1.2196, lambda = 0.3663, b = 0.0436, cond(J) = 19.8763, |f(x)| = 59.8062
-iter 2: A = 1.6062, lambda = 0.1506, b = 0.1054, cond(J) = 20.2970, |f(x)| = 53.9039
-iter 3: A = 2.4528, lambda = 0.0583, b = 0.2470, cond(J) = 90.3289, |f(x)| = 28.8039
-iter 4: A = 2.9723, lambda = 0.0494, b = 0.3727, cond(J) = 184.3828, |f(x)| = 15.3252
-iter 5: A = 3.3473, lambda = 0.0477, b = 0.4410, cond(J) = 235.5901, |f(x)| = 10.7511
-iter 6: A = 3.6690, lambda = 0.0508, b = 0.4617, cond(J) = 206.1182, |f(x)| = 9.7373
-iter 7: A = 3.9907, lambda = 0.0580, b = 0.5433, cond(J) = 147.7071, |f(x)| = 8.7661
-iter 8: A = 4.2353, lambda = 0.0731, b = 0.7989, cond(J) = 125.8964, |f(x)| = 7.4299
-iter 9: A = 4.6573, lambda = 0.0958, b = 1.0302, cond(J) = 100.5450, |f(x)| = 6.1893
-iter 10: A = 5.0138, lambda = 0.1060, b = 1.0329, cond(J) = 94.0404, |f(x)| = 5.4961
-iter 11: A = 5.1505, lambda = 0.1103, b = 1.0497, cond(J) = 91.2259, |f(x)| = 5.4552
-iter 12: A = 5.1724, lambda = 0.1110, b = 1.0526, cond(J) = 90.7179, |f(x)| = 5.4542
-iter 13: A = 5.1737, lambda = 0.1110, b = 1.0528, cond(J) = 90.6803, |f(x)| = 5.4542
-iter 14: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 90.6791, |f(x)| = 5.4542
-iter 15: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 90.6790, |f(x)| = 5.4542
-iter 16: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 90.6790, |f(x)| = 5.4542
+iter 0: A = 1.0000, lambda = 1.0000, b = 0.0000, cond(J) = inf, |f(x)| = 62.2029
+iter 1: A = 1.2196, lambda = 0.3663, b = 0.0436, cond(J) = 53.6368, |f(x)| = 59.8062
+iter 2: A = 1.6062, lambda = 0.1506, b = 0.1054, cond(J) = 23.8178, |f(x)| = 53.9039
+iter 3: A = 2.4528, lambda = 0.0583, b = 0.2470, cond(J) = 20.0493, |f(x)| = 28.8039
+iter 4: A = 2.9723, lambda = 0.0494, b = 0.3727, cond(J) = 94.5601, |f(x)| = 15.3252
+iter 5: A = 3.3473, lambda = 0.0477, b = 0.4410, cond(J) = 229.3627, |f(x)| = 10.7511
+iter 6: A = 3.6690, lambda = 0.0508, b = 0.4617, cond(J) = 298.3589, |f(x)| = 9.7373
+iter 7: A = 3.9907, lambda = 0.0580, b = 0.5433, cond(J) = 250.0194, |f(x)| = 8.7661
+iter 8: A = 4.2353, lambda = 0.0731, b = 0.7989, cond(J) = 154.8571, |f(x)| = 7.4299
+iter 9: A = 4.6573, lambda = 0.0958, b = 1.0302, cond(J) = 140.2265, |f(x)| = 6.1893
+iter 10: A = 5.0138, lambda = 0.1060, b = 1.0329, cond(J) = 109.4141, |f(x)| = 5.4961
+iter 11: A = 5.1505, lambda = 0.1103, b = 1.0497, cond(J) = 100.8762, |f(x)| = 5.4552
+iter 12: A = 5.1724, lambda = 0.1110, b = 1.0526, cond(J) = 97.3403, |f(x)| = 5.4542
+iter 13: A = 5.1737, lambda = 0.1110, b = 1.0528, cond(J) = 96.7136, |f(x)| = 5.4542
+iter 14: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 96.6678, |f(x)| = 5.4542
+iter 15: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 96.6663, |f(x)| = 5.4542
+iter 16: A = 5.1738, lambda = 0.1110, b = 1.0528, cond(J) = 96.6663, |f(x)| = 5.4542
 summary from method 'trust-region/levenberg-marquardt'
 number of iterations: 16
 function evaluations: 23
