@@ -33,6 +33,7 @@
 #include <gsl/gsl_rng.h>
 
 #include "test_cholesky.c"
+#include "oct.c"
 
 #define TEST_SVD_4X4 1
 
@@ -64,7 +65,7 @@ int test_QRPT_solve_dim(const gsl_matrix * m, const double * actual, double eps)
 int test_QRPT_solve(void);
 int test_QRPT_QRsolve_dim(const gsl_matrix * m, const double * actual, double eps);
 int test_QRPT_QRsolve(void);
-int test_QRPT_decomp_dim(const gsl_matrix * m, double eps);
+int test_QRPT_decomp_dim(const gsl_matrix * m, const double expected_rcond, double eps);
 int test_QRPT_decomp(void);
 int test_QRPT_lssolve_dim(const gsl_matrix * m, const double * actual, double eps);
 int test_QRPT_lssolve(void);
@@ -1422,55 +1423,64 @@ int test_QRPT_QRsolve(void)
 }
 
 int
-test_QRPT_decomp_dim(const gsl_matrix * m, double eps)
+test_QRPT_decomp_dim(const gsl_matrix * m, const double expected_rcond, double eps)
 {
   int s = 0, signum;
   unsigned long i,j, M = m->size1, N = m->size2;
+  double rcond;
 
-  gsl_matrix * qr = gsl_matrix_alloc(M,N);
-  gsl_matrix * a  = gsl_matrix_alloc(M,N);
-  gsl_matrix * q  = gsl_matrix_alloc(M,M);
-  gsl_matrix * r  = gsl_matrix_alloc(M,N);
-  gsl_vector * d = gsl_vector_alloc(GSL_MIN(M,N));
+  gsl_matrix * QR = gsl_matrix_alloc(M, N);
+  gsl_matrix * A  = gsl_matrix_alloc(M, N);
+  gsl_matrix * Q  = gsl_matrix_alloc(M, M);
+  gsl_matrix * R  = gsl_matrix_alloc(M, N);
+  gsl_vector * tau = gsl_vector_alloc(GSL_MIN(M, N));
   gsl_vector * norm = gsl_vector_alloc(N);
+  gsl_vector * work = gsl_vector_alloc(3 * N);
 
   gsl_permutation * perm = gsl_permutation_alloc(N);
 
-  gsl_matrix_memcpy(qr,m);
+  gsl_matrix_memcpy(QR, m);
+  s += gsl_linalg_QRPT_decomp(QR, tau, perm, &signum, norm);
+  s += gsl_linalg_QR_unpack(QR, tau, Q, R);
 
-  s += gsl_linalg_QRPT_decomp(qr, d, perm, &signum, norm);
-  s += gsl_linalg_QR_unpack(qr, d, q, r);
-
-  /* compute a = q r */
-  gsl_blas_dgemm (CblasNoTrans, CblasNoTrans, 1.0, q, r, 0.0, a);
-
+  /* compute A = Q R */
+  gsl_blas_dgemm (CblasNoTrans, CblasNoTrans, 1.0, Q, R, 0.0, A);
 
   /* Compute QR P^T by permuting the elements of the rows of QR */
 
-  for (i = 0; i < M; i++) {
-    gsl_vector_view row = gsl_matrix_row (a, i);
-    gsl_permute_vector_inverse (perm, &row.vector);
-  }
-
-  for(i=0; i<M; i++) {
-    for(j=0; j<N; j++) {
-      double aij = gsl_matrix_get(a, i, j);
-      double mij = gsl_matrix_get(m, i, j);
-      int foo = check(aij, mij, eps);
-      if(foo) {
-        printf("(%3lu,%3lu)[%lu,%lu]: %22.18g   %22.18g\n", M, N, i,j, aij, mij);
-      }
-      s += foo;
+  for (i = 0; i < M; i++)
+    {
+      gsl_vector_view row = gsl_matrix_row (A, i);
+      gsl_permute_vector_inverse (perm, &row.vector);
     }
-  }
+
+  for (i = 0; i < M; i++)
+    {
+      for (j = 0; j < N; j++)
+        {
+          double aij = gsl_matrix_get(A, i, j);
+          double mij = gsl_matrix_get(m, i, j);
+          int foo = check(aij, mij, eps);
+          if(foo)
+            printf("(%3lu,%3lu)[%lu,%lu]: %22.18g   %22.18g\n", M, N, i,j, aij, mij);
+          s += foo;
+        }
+    }
+
+  if (expected_rcond > 0.0)
+    {
+      gsl_linalg_QRPT_rcond(QR, &rcond, work);
+      gsl_test_rel(rcond, expected_rcond, 1.0e-10, "QRPT_rcond");
+    }
 
   gsl_permutation_free (perm);
   gsl_vector_free(norm);
-  gsl_vector_free(d);
-  gsl_matrix_free(qr);
-  gsl_matrix_free(a);
-  gsl_matrix_free(q);
-  gsl_matrix_free(r);
+  gsl_vector_free(work);
+  gsl_vector_free(tau);
+  gsl_matrix_free(QR);
+  gsl_matrix_free(A);
+  gsl_matrix_free(Q);
+  gsl_matrix_free(R);
 
   return s;
 }
@@ -1480,51 +1490,52 @@ int test_QRPT_decomp(void)
   int f;
   int s = 0;
 
-  f = test_QRPT_decomp_dim(m35, 2 * 8.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(m35, -1.0, 2 * 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp m(3,5)");
   s += f;
 
-  f = test_QRPT_decomp_dim(m53, 2 * 8.0 * GSL_DBL_EPSILON);
+  /* rcond value from LAPACK DTRCON */
+  f = test_QRPT_decomp_dim(m53, 2.915362697820e-03, 2 * 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp m(5,3)");
   s += f;
 
-  f = test_QRPT_decomp_dim(s35, 2 * 8.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(s35, -1.0, 2 * 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp s(3,5)");
   s += f;
 
-  f = test_QRPT_decomp_dim(s53, 2 * 8.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(s53, -1.0, 2 * 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp s(5,3)");
   s += f;
 
-  f = test_QRPT_decomp_dim(hilb2, 2 * 8.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(hilb2, -1.0, 2 * 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp hilbert(2)");
   s += f;
 
-  f = test_QRPT_decomp_dim(hilb3, 2 * 64.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(hilb3, -1.0, 2 * 64.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp hilbert(3)");
   s += f;
 
-  f = test_QRPT_decomp_dim(hilb4, 2 * 1024.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(hilb4, -1.0, 2 * 1024.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp hilbert(4)");
   s += f;
 
-  f = test_QRPT_decomp_dim(hilb12, 2 * 1024.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(hilb12, -1.0, 2 * 1024.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp hilbert(12)");
   s += f;
 
-  f = test_QRPT_decomp_dim(vander2, 8.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(vander2, -1.0, 8.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp vander(2)");
   s += f;
 
-  f = test_QRPT_decomp_dim(vander3, 64.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(vander3, -1.0, 64.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp vander(3)");
   s += f;
 
-  f = test_QRPT_decomp_dim(vander4, 1024.0 * GSL_DBL_EPSILON);
+  f = test_QRPT_decomp_dim(vander4, -1.0, 1024.0 * GSL_DBL_EPSILON);
   gsl_test(f, "  QRPT_decomp vander(4)");
   s += f;
 
-  f = test_QRPT_decomp_dim(vander12, 0.0005); /* FIXME: bad accuracy */
+  f = test_QRPT_decomp_dim(vander12, -1.0, 0.0005); /* FIXME: bad accuracy */
   gsl_test(f, "  QRPT_decomp vander(12)");
   s += f;
 
