@@ -1,5 +1,8 @@
 * What is new in gsl-2.2:
 
+** added function gsl_linalg_QRPT_rcond to compute estimate
+   of condition number for R factor
+
 ** added functions gsl_linalg_QRPT_{lssolve,lssolve2} to
    compute least squares solutions with the QRPT decomposition
 
